# OneVision-Encoder

./: .gitignore  .pylintrc  AIMV2_PACKING_REFACTORING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LLAVA_NEXT.md  OPTIMIZATION_SUMMARY.md  PACKING_IMPLEMENTATION_DINOV3_AIMV2.md  PACKING_TOWER_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  dockerfile  fig1.py  fig2.py  pyproject.toml  run_docker.sh  split_np.py  verify_architecture_alignment.py
Encoder_Eval/: README.md  dockerfile
dataloader/: ap_dataloader_dali.py  ap_dataloader_dali_codec.py  ap_dataloader_dali_ip_mv.py  data_decord_llava_vit.py  data_decord_video.py  data_decord_video_fix_ip.py  data_decord_video_fix_ip_fix_size.py  data_decord_video_fix_ip_fix_size_residual_mv.py  data_decord_video_sampling_frame.py  data_v2.py  data_v2_multi_res.py  data_v2_ocr.py  hevc_feature_decoder.py  hevc_feature_decoder_mv.py  re10k_dataloader_dali.py
dataset/: __init__.py  cp_to_ssd.py  dataset_distill_mlcd.py  dataset_llava_vit.py  dataset_ssv2_k710_diving.py  dataset_ssv2_k710_pfc.py  dataset_ssv2_k710_pfc_ip_path.py  generate_rec.py  properties.py
deprecated/: LLAVA_NEXT.md
docs/: datacard.md  model_card.md
encoder_eval/: README.md  dockerfile
eval_encoder/: attentive_prob_mv.py  attentive_prob_re10k.py  attentive_probe.py  attentive_probe_codec.py  video_attentive_probe.sh  video_attentive_probe_ip.sh  video_attentive_probe_multi_scale.sh  video_attentive_probe_pre.sh
examples/: README.md  run_causal_intervention.sh  run_patch_shuffle.sh  (+1 more)
(+595 files in other folders)
